# kakiyomi-backend

./: .env.example  README.md  pyproject.toml  requirements.txt  server.py
modules/: translator.py
services/: detection_service.py  inpainting_service.py  ocr_service.py  translation_service.py
services/utils/: pipeline_utils.py  translator_utils.py
